Revert "Updating due to java update"
This reverts commit 45d5fd00bb0d2b1b596d38b225701605cd687e42.